# zig_learning

./: .bazelrc  BUILD.bazel  MODULE.bazel  Makefile  bazel-bin  bazel-out  bazel-testlogs  bazel-zig_learning  build.zig  build.zig.zon
.zig-cache/c/133459dcfc3b76a5da1e8ff687c3a224/: options.zig
.zig-cache/o/397ab737c3606d5f46b060e522a30ac0/: test
.zig-cache/o/57a6415055c2a43a70bb66a6d32803ff/: test
.zig-cache/o/e2da92c813956ba0a2230bb6dc918258/: dependencies.zig
src/: allyourcode.zig  concurrent.zig  main.zig  odin.zig  root.zig  zioconcurrent.zig
zig-pkg/zio-0.11.0-xHbVVEqQGwDz0MYoQ0j7Ke0Y9E_iZVe5eLAWK4gd9U0i/: build.zig  build.zig.zon
zig-pkg/zio-0.11.0-xHbVVEqQGwDz0MYoQ0j7Ke0Y9E_iZVe5eLAWK4gd9U0i/examples/: coro_demo.zig  ev_demo.zig  hello_world.zig  http_server.zig  mutex_demo.zig  ntp_client.zig  parallel_grep.zig  ping.zig  producer_consumer.zig  signal_demo.zig  sleep.zig  tcp_client.zig  tcp_echo_server.zig  tcp_echo_server_stdio.zig  udp_echo_server.zig
zig-pkg/zio-0.11.0-xHbVVEqQGwDz0MYoQ0j7Ke0Y9E_iZVe5eLAWK4gd9U0i/src/: autocancel.zig  awaitable.zig  blocking_task.zig  common.zig  completion_queue.zig  fs.zig  group.zig  io.zig  meta.zig  net.zig  process.zig  runtime.zig  select.zig  signal.zig  task.zig  time.zig  zio.zig
zig-pkg/zio-0.11.0-xHbVVEqQGwDz0MYoQ0j7Ke0Y9E_iZVe5eLAWK4gd9U0i/src/coro/: coroutines.zig  root.zig  stack.zig  stack_pool.zig
zig-pkg/zio-0.11.0-xHbVVEqQGwDz0MYoQ0j7Ke0Y9E_iZVe5eLAWK4gd9U0i/src/dns/: darwin.zig  posix.zig  root.zig  windows.zig
zig-pkg/zio-0.11.0-xHbVVEqQGwDz0MYoQ0j7Ke0Y9E_iZVe5eLAWK4gd9U0i/src/ev/: README.md  backend.zig  blocking.zig  buf.zig  completion.zig  heap.zig  loop.zig  queue.zig  root.zig  tests.zig  (+1 more)
(+54 files in other folders)
